--- a/style-general.css
+++ b/style-general.css
@@ -114,108 +114,61 @@ html::-webkit-scrollbar-thumb {
 /* Projects */
 
 .projects-container {
+  padding: 2rem;
   height: calc(100vh - 8rem);
-  overflow: hidden;
-  background-color: var(--main-color-shade1);
 }
 
 .projects {
-  padding: 3rem;
   height: 100%;
-  overflow: hidden;
-  /* position: relative; */
+  width: 100%;
+  overflow: clip;
   display: flex;
-  /* grid-template-columns: 20% 30% 50%; */
+  flex-direction: row;
 }
 
 .project {
+  position: relative;
+  display: inline-block;
+  overflow: clip;
   height: 100%;
+  width: 90rem;
   transition: all 0.3s;
-  overflow: hidden;
-  /* border: 1px solid red; */
-}
-
-.p1,
-.p2,
-.p3 {
-  height: calc(100% - 6rem);
-  border-right: none;
-  overflow: hidden;
-  position: absolute;
-}
-
-.p2,
-.p3 {
-  width: 100rem;
-  border-radius: 30% 0% 0% 30% / 50% 10% 10% 50%;
-}
-
-.p1 {
-  z-index: 0;
-  width: 100rem;
-}
-
-.p2 {
-  right: 30%;
-  z-index: 1;
-}
-
-.p3 {
-  right: 0;
-  z-index: 2;
 }
 
 .titulo-diseño,
 .titulo-ilustracion,
 .titulo-fotografia {
-  z-index: 1;
-  position: relative;
-  font-size: 10rem;
+  position: absolute;
+  font-size: 5rem;
   top: 50%;
   transform: translateY(-50%);
-  opacity: 0;
-  transition: all 0.3s;
-  background-color: #b6ede5;
+  left: 2rem;
   color: var(--greys-color);
+  background-color: var(--main-color-shade1);
   display: inline-block;
+  z-index: 4;
+  transition: all 0.3s;
 }
 
-.img-diseño {
+.project > img {
   height: 100%;
-  transform: scale(1.2) translate(-5%, -20%);
-}
-
-.img-ilustracion,
-.img-fotografia {
-  height: auto;
-  width: 100%;
-  transform: scale(1.2) translate(-5%, -15%);
-}
-
-.icon {
-  width: 30rem;
-  height: 30rem;
+  transform: scale(1.3);
   position: absolute;
-  right: 8%;
-  top: 50%;
-  transform: translateY(-50%);
+  transition: all 0.2s;
+}
+
+.p1 {
+  margin-right: -20%;
+}
+
+.p2 {
+  margin-right: -20%;
+  border-radius: 34% 0% 0% 38% / 41% 10% 10% 46%;
+  width: 100rem;
+  z-index: 2;
+}
+
+.p3 {
   z-index: 3;
-}
-
-.icon::before {
-  content: "";
-  display: block;
-  width: 180%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  background-color: var(--accent-color);
-  border-top-left-radius: 15rem;
-  border-bottom-left-radius: 15rem;
-  z-index: -1;
-}
-
-.main-icon {
-  width: 100%;
-  height: 100%;
+  border-radius: 34% 0% 0% 38% / 41% 10% 10% 46%;
 }
