--- a/style-ilustracion.css
+++ b/style-ilustracion.css
@@ -150,7 +150,7 @@ div.overlay-gallery {
   width: auto;
   border: 1px solid var(--greys-color);
   margin-bottom: 2rem;
-  transition: all 0.5s;
+  transition: all 0.3s ease;
 }
 
 .pagination {
@@ -191,4 +191,8 @@ div.overlay-gallery {
 
 .gallery-arrow:last-of-type {
   right: 2rem;
+}
+
+.image-transition {
+  transition: opacity 0.3s ease; /* You can adjust the duration and timing function as needed */
 }
