--- a/style-ilustracion.css
+++ b/style-ilustracion.css
@@ -34,9 +34,9 @@ html::-webkit-scrollbar-thumb {
 /*Pantalla de carga temporal*/
 
 .loading-screen {
-  display: grid;
-  column-gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   width: calc(100vw - 1rem);
   height: calc(100vh - 8rem);
   padding: 0 1rem 5rem 1rem;
@@ -44,26 +44,45 @@ html::-webkit-scrollbar-thumb {
 
 @keyframes loadingScreen {
   0% {
-    transform: scale(1, 1);
+    transform: translateX(20rem);
+  }
+  10% {
+    transform: translateX(30rem) translateY(-5rem);
+  }
+  20% {
+    transform: translateX(40rem) translateY(5rem);
+  }
+  30% {
+    transform: translateX(50rem) translateY(-5rem);
+  }
+  40% {
+    transform: translateX(60rem) translateY(5rem);
   }
   50% {
-    transform: scale(1, 1.2) translateY(5rem);
+    transform: translateX(70rem) translateY(-5rem);
+  }
+  60% {
+    transform: translateX(80rem) translateY(5rem);
+  }
+  70% {
+    transform: translateX(90rem) translateY(-5rem);
+  }
+  80% {
+    transform: translateX(100rem) translateY(5rem);
+  }
+  90% {
+    transform: translateX(110rem) translateY(-5rem);
   }
   100% {
-    transform: scale(1, 1);
+    transform: translateX(120rem) translateY(5rem);
   }
 }
 
-.loading-el {
-  width: 100%;
-  animation-name: loadingScreen;
-  animation-duration: 2500ms;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  background-color: var(--main-color-transparent);
-  border: 1px solid var(--greys-color-transparent);
-  border-radius: 5px;
+.loading-icon {
+  height: 20%;
+  width: auto;
+  animation: loadingScreen 3s linear infinite;
+  margin-left: 25rem;
 }
 
 .loading-el:nth-child(1) {
@@ -99,7 +118,6 @@ h1 {
   width: calc(100vw - 1rem);
   background-color: var(--main-color-shade1);
   grid-template-columns: repeat(3, minmax(25rem, 1fr));
-  /* padding-bottom: 10rem; */
   padding: 0 1rem 5rem 1rem;
 }
 
@@ -145,8 +163,14 @@ div.overlay-gallery {
   display: none;
 }
 
-#gallery-img {
+.img-container {
   height: 80%;
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+#gallery-img {
+  height: 100%;
   width: auto;
   border: 1px solid var(--greys-color);
   margin-bottom: 2rem;
@@ -194,5 +218,5 @@ div.overlay-gallery {
 }
 
 .image-transition {
-  transition: opacity 0.3s ease; /* You can adjust the duration and timing function as needed */
+  transition: opacity 0.3s ease;
 }
