--- a/src/css/style-fotografia.css
+++ b/src/css/style-fotografia.css
@@ -34,6 +34,50 @@ html {
   overflow: hidden;
 }
 
-.image {
-  /* transform: scale(1.5); */
+.gallery-overlay {
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
 }
+
+.gallery-arrow {
+  display: inline-block;
+  position: absolute;
+  height: 4.5rem;
+  width: 4.5rem;
+  stroke: var(--main-color-shade1);
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.gallery-arrow:hover {
+  cursor: pointer;
+}
+
+.gallery-arrow:first-of-type {
+  left: 2rem;
+}
+
+.gallery-arrow:last-of-type {
+  right: 2rem;
+}
+
+.img-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  transform: translate(-50%, -50%);
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* #gallery-img {
+  object-fit: contain;
+} */
