--- a/src/css/style-diseno.css
+++ b/src/css/style-diseno.css
@@ -11,7 +11,7 @@
   gap: 2rem;
 }
 
-.poject-card {
+.project-card {
   background-color: var(--accent-color-shade1);
   overflow: hidden;
   border-radius: 20px;
@@ -19,7 +19,7 @@
   transition: all 0.3s;
 }
 
-.poject-card:hover {
+.project-card:hover {
   cursor: pointer;
   transform: translateY(-4%);
 }
@@ -53,4 +53,37 @@
 .poject-title {
   padding: 1rem 2rem;
   font-size: 1.5rem;
+}
+/* Overlay */
+
+.overlay-diseno {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--greys-color-transparent);
+  overflow-y: scroll;
+}
+
+.overlay-diseno::-webkit-scrollbar {
+  width: 1rem;
+  height: 0;
+}
+
+.overlay-diseno::-webkit-scrollbar-track {
+  background-color: var(--greys-color-transparent);
+}
+
+.overlay-diseno::-webkit-scrollbar-thumb {
+  background-color: var(--accent-color);
+  border-radius: 6px;
+  outline: 1px transparent var(--greys-color);
+}
+
+.img-container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
