Correciones de estilo solicitadas por el cliente

--- a/src/css/style-diseno.css
+++ b/src/css/style-diseno.css
@@ -87,6 +87,12 @@
   flex-direction: column;
 }
 
+.img-tall {
+  height: 100vh;
+  width: auto;
+  object-fit: contain;
+}
+
 .hidden-diseno {
   display: none;
 }
