--- a/src/css/queries/queries-diseno.css
+++ b/src/css/queries/queries-diseno.css
@@ -21,6 +21,10 @@
     height: auto;
   }
 
+  .overlay-diseno {
+    position: fixed;
+  }
+
   .overlay-diseno::-webkit-scrollbar {
     width: 0;
     height: 0;
