Se actualizan los formatos de las imagenes mas pesadas a .webp para mejorar rendimiento

--- a/src/css/style-diseno.css
+++ b/src/css/style-diseno.css
@@ -37,7 +37,7 @@
 }
 
 .img2 {
-  background: url("../img/Diseno/Carteles/ACartel-Colombiano.jpg");
+  background: url("../img/Diseno/Carteles/0.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
