Se agregan los queries para responsividad de la seccion de ilustracion y se cambian las imagenes a formato webp para  mejor desempeño

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -235,7 +235,7 @@ html::-webkit-scrollbar-thumb {
   border-radius: 34% 0% 0% 38% / 41% 10% 10% 46%;
   width: 100rem;
   z-index: 2;
-  background: url("../img/Ilustración/Mapache.jpg");
+  background: url("../img/Ilustración/12.webp");
   background-size: cover;
   background-position: center;
 }
