--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -1,7 +1,7 @@
 :root {
   --main-color: #48d1bf;
   --main-color-shade1: #daf6f2;
-  --main-color-transparent: rgba(72, 209, 191, 0.5);
+  --main-color-transparent: rgba(72, 209, 191, 0.9);
   --accent-color: #ff6468;
   --accent-color-shade1: #ffa2a4;
   --accent-tint1: #331415;
@@ -276,4 +276,64 @@ html::-webkit-scrollbar-thumb {
   border-bottom-left-radius: 50%;
   position: absolute;
   z-index: -1; /* to be below the parent element */
+}
+
+/* Mobile navigation*/
+
+.mobile-nav-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background-color: var(--main-color-transparent);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+  transition: all 0.5s ease-in;
+}
+
+.hidden-nav-overlay {
+  /* 1) Hide it visually */
+  opacity: 0;
+
+  /* 2) Make it unaccessible to mouse and keyboard */
+  pointer-events: none;
+
+  /* 3) Hide it from screen readers */
+  visibility: hidden;
+
+  transform: translateX(100%);
+}
+
+.mobile-nav-list {
+  z-index: 11;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.mobile-nav-item {
+  font-size: 3rem;
+}
+
+.social {
+  display: flex;
+  list-style: none;
+  gap: 2rem;
+}
+
+.mobile-link:link,
+.mobile-link:visited {
+  text-decoration: none;
+  color: var(--greys-color);
+}
+
+.mobile-nav-logo {
+  fill: var(--accent-color);
 }
