--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -42,6 +42,10 @@ html::-webkit-scrollbar-thumb {
   outline: 1px transparent var(--greys-color);
 }
 
+body {
+  overflow: hidden;
+}
+
 /* Navigation */
 
 .nav-container {
@@ -50,6 +54,7 @@ html::-webkit-scrollbar-thumb {
   align-items: center;
   justify-content: space-between;
   background-color: #fb9772;
+  position: relative;
 }
 
 .nav-icon {
@@ -112,6 +117,7 @@ html::-webkit-scrollbar-thumb {
 
 .mobile-nav-btn {
   display: none;
+  transition: all 0.3s;
 }
 
 /*Dropdown links de insta*/
@@ -316,6 +322,16 @@ html::-webkit-scrollbar-thumb {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+}
+
+.close-mobile {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  fill: none;
+  stroke: var(--greys-color);
 }
 
 .mobile-nav-item {
