--- a/src/css/style-fotografia.css
+++ b/src/css/style-fotografia.css
@@ -18,11 +18,12 @@ html {
 .track-container {
   position: relative;
   height: calc(100vh - 8rem);
+  overflow-y: clip;
 }
 
 #image-track > img {
   width: 40rem;
-  height: 50rem;
+  height: 100%;
   object-fit: cover;
   object-position: 100% center;
   user-select: none;
@@ -32,6 +33,7 @@ html {
   display: flex;
   align-items: center;
   gap: 4rem;
+  height: 50rem;
   position: absolute;
   top: 50%;
   left: 50%;
