Correccion de el overlay de fotografia para pantallas tactiles

--- a/src/css/queries/queries-fotografia.css
+++ b/src/css/queries/queries-fotografia.css
@@ -27,6 +27,14 @@
     width: 20%;
     margin-bottom: 1rem;
   }
+
+  #image-track {
+    left: 4rem;
+  }
+
+  .gallery-arrow {
+    display: none;
+  }
 }
 
 /*544px*/
