--- a/src/css/style-fotografia.css
+++ b/src/css/style-fotografia.css
@@ -17,7 +17,7 @@ html {
 
 .track-container {
   position: relative;
-  height: calc(100vh - 8rem);
+  height: calc(100vh - 8rem - 7rem);
   overflow-y: clip;
 }
 
@@ -150,10 +150,7 @@ html {
 /*Flechas galeria*/
 
 .buttons {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 0 auto;
   width: 10%;
   margin-bottom: 2rem;
   display: flex;
