--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -297,7 +297,7 @@ body {
   height: 100vh;
   z-index: 10;
   background-color: var(--main-color-transparent);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   backdrop-filter: blur(10px);
   transition: all 0.5s ease-in;
 }
