Se agrega un enlace en el logo principal que lleva al inicio

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -75,6 +75,11 @@ body {
   align-items: center;
 }
 
+.left-nav:hover,
+.left-nav:active {
+  cursor: pointer;
+}
+
 .nav-list {
   display: flex;
   list-style: none;
