--- a/src/css/style-ilustracion.css
+++ b/src/css/style-ilustracion.css
@@ -168,21 +168,14 @@ div.overlay-gallery {
   transition: all 0.3s ease;
 }
 
-.img-desc {
-  padding: 0 3rem;
-  width: 40%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.img-text {
+.img-tittle {
   color: #803234;
   font-size: 2.5rem;
-  padding: 1.5rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
   border-radius: 20px;
   background-color: #daf6f2;
-}
+} 
 
 .pagination {
   height: 2rem;
